# plataforma-genia

./: .env.example  .gitignore  AGENTS.md  FINANCIALS.md  NARRATIVE.md  PROGRESS.md  README.md  XPRIZE_SUBMISSION_GUIDE.md  add_envs.bat  add_envs.ps1  add_envs_flat.ps1  debug-whatsapp-no-response.md  docker-compose.yml  package.json  production.env  requirements.txt  start_local.ps1  test_client.html  update_production_envs.ps1  vercel.json  vercel_logs_latest.json  vercel_webhook_logs.json  vercel_webhook_logs_100.json
backend/: .env.example  .env.production.example  config.py  database.py  debug_agent.py  debug_production_last_messages.py  debug_production_payloads.py  local_proxy.py  main.py  pyproject.toml  read_env.py  requirements.txt  run_all_tests.py  scratch_railway.py  test_api.py  test_calendar_and_stt.py  test_deepseek_call.py  test_didactic_training.py  test_hmac.py  test_images.py  test_kb_update.py  test_mcp_integration.py  test_model_rotation.py  test_new_features.py  test_openrouter.py  test_prod_webhook_live.py  test_rag.py  test_whatsapp_qr.py
backend/alembic/: env.py
backend/models/: __init__.py  action_log.py  agent.py  agent_image.py  agent_usage.py  api_key.py  conversation.py  free_model_status.py  knowledge.py  knowledge_chunk.py  lead.py  mcp_server_config.py  payment.py  subscription.py  tenant.py
backend/provisioning/: con-tranqui.yaml
backend/routers/: __init__.py  agents.py  chat.py  conversations.py  dashboard.py  free_models.py  google_calendar.py  knowledge.py  leads.py  mcp.py  metrics.py  public_api.py  whatsapp.py
backend/schemas/: __init__.py  agent.py  agent_image.py  agent_usage.py  conversation.py  knowledge.py  lead.py
backend/scripts/: __init__.py  inspect_databases.py  inspect_result.txt  migrate_backup.py  (+4 more)
(+96 files in other folders)
